add description for salmon html

--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -6,6 +6,14 @@
     </head>
     <body>
         <h1>Glazed Salmon</h1>
-        <img src="../images/glazedsalmon.jpg">
+        <img src="../images/glazedsalmon.jpg" alt="picofsalmon">
+        <h2>Description</h2>
+        <p>
+            Have you ever made a recipe that truly surprised you?<br>
+            Normally I’m not a huge salmon lover, but after one bite of<br>
+            this ultra tender salmon, I was absolutely in love.<br>
+            I literally did a little dance in the kitchen because<br>
+            I finally found a way that I can enjoy salmon!<br>
+        </p>
     </body>
 </html>
