added ingredients for glazed salmon recipe

--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -14,6 +14,21 @@
             this ultra tender salmon, I was absolutely in love.<br>
             I literally did a little dance in the kitchen because<br>
             I finally found a way that I can enjoy salmon!<br>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Salmon filets</li>
+                <li>Kosher salt</li>
+                <li>Black pepper</li>
+                <li>Smoked paprika</li>
+                <li>Butter</li>
+                <li>Olive oil</li>
+                <li>Garlic</li>
+                <li>Honey</li>
+                <li>Water</li>
+                <li>Soy sauce</li>
+                <li>Sriracha sauce</li>
+                <li>Lemon juice</li>
+            </ul>
         </p>
     </body>
 </html>
