added steps for glazed salmon

--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -14,6 +14,7 @@
             this ultra tender salmon, I was absolutely in love.<br>
             I literally did a little dance in the kitchen because<br>
             I finally found a way that I can enjoy salmon!<br>
+        </p>
             <h2>Ingredients</h2>
             <ul>
                 <li>Salmon filets</li>
@@ -29,6 +30,14 @@
                 <li>Sriracha sauce</li>
                 <li>Lemon juice</li>
             </ul>
-        </p>
+            <h2>Steps</h2>
+            <ol>
+                <li>Pat salmon dry, then season with salt, pepper, paprika and blackening seasoning (if using). Set aside.</li>
+                <li><strong>IMPORTANT: Adjust oven rack to middle position, then preheat broiler. If you broil this with the rack up high the sauce will burn.</strong></li>
+                <li>Add butter and oil to a large, oven-safe skillet over MED-HIGH heat. Once butter is melted, add garlic, water, soy sauce, sriracha, honey and lemon juice and cook 30 seconds or so, until sauce is heated through.</li>
+                <li>Add salmon, skin side down (if using salmon with skin), and cook 3 minutes. While salmon cooks, baste frequently with sauce from the pan by spooning it over the top of the salmon.</li>
+                <li>Broil salmon for 5-6 minutes, basting with sauce once during the broil, until salmon is caramelized and cooked to desired doneness.</li>
+                <li>Garnish with minced parsley if desired.</li>
+            </ol>
     </body>
 </html>
