--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -39,5 +39,8 @@
                 <li>Broil salmon for 5-6 minutes, basting with sauce once during the broil, until salmon is caramelized and cooked to desired doneness.</li>
                 <li>Garnish with minced parsley if desired.</li>
             </ol>
+                <ul>
+               <li><a href="../index.html">Homepage</a></li>
+                </ul>
     </body>
 </html>
