add directions,links, and ingredients for redpepperlignuing page

--- a/recipes/redpepperlinguine.html
+++ b/recipes/redpepperlinguine.html
@@ -13,5 +13,35 @@
             is low effort, high reward. Thanks to store-bought roasted<br>
             peppers, very little active cooking time is required<br>
         </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 lb medium shrimp</li>
+            <li>2 tsp grated lemon zest</li>
+            <li>1 tbsp smoked paprika</li>
+            <li>1 lb linguine</li>
+            <li>2 jars of roasted red peppers</li>
+            <li>1/2 c. heavy cream</li>
+            <li>2 tbsp unsalted butter</li>
+            <li>2 shallots</li>
+            <li>4 cloves garlic finely chopped</li>
+            <li>1/2 c. dry white wine</li>
+            <li>6 tbsp crumbled feta</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>In a large bowl, combine shrimp, lemon zest, 1 teaspoon paprika, and 1 teaspoon salt. Cover bowl with a kitchen towel and refrigerate until ready to use.</li>
+            <li>In a large pot of boiling salted water, cook pasta until al dente according to package directions. Reserve 1 cup pasta water before draining.</li>
+            <li>Meanwhile, in a blender or food processor, blend peppers, cream, and remaining 2 teaspoons paprika and 1 teaspoon salt until smooth.</li>
+            <li>In a large skillet over medium heat, melt butter. Add shallot and garlic and cook, stirring occasionally, until golden at the edges, 3 to 5 minutes. Add wine and scrape up any browned bits from bottom of pan with a wooden spoon. Cook, stirring occasionally, until most liquid has evaporated, about 2 minutes more.</li>
+            <li>Reduce heat to medium-low and add pepper mixture. Increase heat to medium and bring to a simmer. Add reserved shrimp in an even layer and cook, flipping once, until opaque, white, and slightly curled, about 3 minutes total.</li>
+            <li>Remove skillet from heat and stir in cooked pasta, adding pasta water to loosen sauce if necessary.</li>
+            <li>Divide pasta among bowls. Top with feta, parsley, and red pepper flakes, if using.</li>
+        </ol>
+        <h2>
+            <ul>
+                <li><a href="../index.html">Homepage</a></li>
+                <li><a href="glazedsalmon.html">Glazed Salmon</a></li>
+            </ul>
+        </h2>
     </body>
 </html>
