add rpl link in glazedsalmon.html

--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -41,6 +41,7 @@
             </ol>
                 <ul>
                <li><a href="../index.html">Homepage</a></li>
+               <li><a href="redpepperlinguine.html">Red Pepper Shrimp Linguine</a></li>
                 </ul>
     </body>
 </html>
