Add arrozconpollo link to gs page

--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -42,6 +42,7 @@
                 <ul>
                <li><a href="../index.html">Homepage</a></li>
                <li><a href="redpepperlinguine.html">Red Pepper Shrimp Linguine</a></li>
+               <li><a href="arrozconpollo.html">Arroz Con Pollo</a></li>
                 </ul>
     </body>
 </html>
