Add acp link on rpl page

--- a/recipes/redpepperlinguine.html
+++ b/recipes/redpepperlinguine.html
@@ -37,11 +37,11 @@
             <li>Remove skillet from heat and stir in cooked pasta, adding pasta water to loosen sauce if necessary.</li>
             <li>Divide pasta among bowls. Top with feta, parsley, and red pepper flakes, if using.</li>
         </ol>
-        <h2>
+        <h2>Links<h2></h2>
             <ul>
                 <li><a href="../index.html">Homepage</a></li>
                 <li><a href="glazedsalmon.html">Glazed Salmon</a></li>
-            </ul>
-        </h2>
+                <li><a href="arrozconpollo.html">Arroz Con Pollo</a></li>
+            </ul
     </body>
 </html>
