--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/glazedsalmon.html">Glazed Salmon</a>
+        <a href="./recipes/redpepperlinguine.html">Red Pepper Shrimp Linguine</a>
+        <a href="./recipes/arrozconpollo.html">Arroz Con Pollo</a>
     </body>
 </html>
