Add list element to homepage recipe links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/glazedsalmon.html">Glazed Salmon</a>
-        <a href="./recipes/redpepperlinguine.html">Red Pepper Shrimp Linguine</a>
-        <a href="./recipes/arrozconpollo.html">Arroz Con Pollo</a>
+        <ul>
+        <li><a href="./recipes/glazedsalmon.html">Glazed Salmon</a></li>
+        <li><a href="./recipes/redpepperlinguine.html">Red Pepper Shrimp Linguine</a></li>
+        <li><a href="./recipes/arrozconpollo.html">Arroz Con Pollo</a></li>
+        </ul>
     </body>
 </html>
