--- a/recipes/arrozconpollo.html
+++ b/recipes/arrozconpollo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Arroz Con Pollo</h1>
-        <img src="arrozconpollo.jpg">
+        <img src="../images/arroz.png" alt="riceandchicken">
         <h2>Description</h2>
         <p>
             Translating directly to rice with chicken, arroz con pollo<br>
