Add css links for salmon and homepage to style

--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -3,10 +3,11 @@
     <head>
         <meta chardet="UTF-8">
         <title>Glazed Salmon</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-        <h1>Glazed Salmon</h1>
-        <img src="../images/glazedsalmon.jpg" alt="picofsalmon">
+    <body class="salmonpagecolor">
+        <h1 id="salmontitle">Glazed Salmon</h1>
+        <img class="salmonpic" src="../images/glazedsalmon.jpg" alt="picofsalmon">
         <h2>Description</h2>
         <p>
             Have you ever made a recipe that truly surprised you?<br>
