Add link title on glazed salmon page to look better

--- a/recipes/glazedsalmon.html
+++ b/recipes/glazedsalmon.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <meta chardet="UTF-8">
+        <meta charset="UTF-8">
         <title>Glazed Salmon</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body class="salmonpagecolor">
         <h1 id="salmontitle">Glazed Salmon</h1>
         <img class="salmonpic" src="../images/glazedsalmon.jpg" alt="picofsalmon">
-        <h2>Description</h2>
-        <p>
+        <h2 class="salmonsubtitle">Description</h2>
+        <p class="salmondes">
             Have you ever made a recipe that truly surprised you?<br>
             Normally I’m not a huge salmon lover, but after one bite of<br>
             this ultra tender salmon, I was absolutely in love.<br>
             I literally did a little dance in the kitchen because<br>
             I finally found a way that I can enjoy salmon!<br>
         </p>
-            <h2>Ingredients</h2>
-            <ul>
+            <h2 class="salmonsubtitle">Ingredients</h2>
+            <ul class="salmonnotes">
                 <li>Salmon filets</li>
                 <li>Kosher salt</li>
                 <li>Black pepper</li>
@@ -30,8 +30,9 @@
                 <li>Soy sauce</li>
                 <li>Sriracha sauce</li>
                 <li>Lemon juice</li>
-            </ul>
-            <h2>Steps</h2>
+        </ul>
+            <h2 class="salmonsubtitle">Steps</h2>
+            <div class="salmonsteps">
             <ol>
                 <li>Pat salmon dry, then season with salt, pepper, paprika and blackening seasoning (if using). Set aside.</li>
                 <li><strong>IMPORTANT: Adjust oven rack to middle position, then preheat broiler. If you broil this with the rack up high the sauce will burn.</strong></li>
@@ -40,10 +41,14 @@
                 <li>Broil salmon for 5-6 minutes, basting with sauce once during the broil, until salmon is caramelized and cooked to desired doneness.</li>
                 <li>Garnish with minced parsley if desired.</li>
             </ol>
+        </div>
+            <h2 class="salmonsubtitle">Links</h2>
+            <div class="salmonlinks">
                 <ul>
                <li><a href="../index.html">Homepage</a></li>
                <li><a href="redpepperlinguine.html">Red Pepper Shrimp Linguine</a></li>
                <li><a href="arrozconpollo.html">Arroz Con Pollo</a></li>
                 </ul>
+            </div>
     </body>
 </html>
