--- a/recipes/redpepperlinguine.html
+++ b/recipes/redpepperlinguine.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Red Pepper Linguine</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
-    <body>
-        <h1>Red Pepper Shrimp Linguine</h1>
-        <img src="../images/roastedredpepper.jpg" alt="linguine">
-        <h2>Description</h2>
-        <p>
+    <body class="redpepperpagecolor">
+        <h1 class="redpeppertitle">Red Pepper Shrimp Linguine</h1>
+        <img class="redpepperpic"  src="../images/roastedredpepper.jpg" alt="linguine">
+        <h2 class="redsubtitle">Description</h2>
+        <p class="reddescrip">
             Creamy, smoky, and spicy, this comforting shrimp pasta<br>
             is low effort, high reward. Thanks to store-bought roasted<br>
             peppers, very little active cooking time is required<br>
         </p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="redsubtitle">Ingredients</h2>
+        <ul class="redcenter">
             <li>1 lb medium shrimp</li>
             <li>2 tsp grated lemon zest</li>
             <li>1 tbsp smoked paprika</li>
@@ -27,8 +28,8 @@
             <li>1/2 c. dry white wine</li>
             <li>6 tbsp crumbled feta</li>
         </ul>
-        <h2>Directions</h2>
-        <ol>
+        <h2 class="redsubtitle">Directions</h2>
+        <ol class="redleft">
             <li>In a large bowl, combine shrimp, lemon zest, 1 teaspoon paprika, and 1 teaspoon salt. Cover bowl with a kitchen towel and refrigerate until ready to use.</li>
             <li>In a large pot of boiling salted water, cook pasta until al dente according to package directions. Reserve 1 cup pasta water before draining.</li>
             <li>Meanwhile, in a blender or food processor, blend peppers, cream, and remaining 2 teaspoons paprika and 1 teaspoon salt until smooth.</li>
@@ -37,8 +38,8 @@
             <li>Remove skillet from heat and stir in cooked pasta, adding pasta water to loosen sauce if necessary.</li>
             <li>Divide pasta among bowls. Top with feta, parsley, and red pepper flakes, if using.</li>
         </ol>
-        <h2>Links<h2></h2>
-            <ul>
+        <h2 class="redsubtitle">Links<h2></h2>
+            <ul class="redcenter">
                 <li><a href="../index.html">Homepage</a></li>
                 <li><a href="glazedsalmon.html">Glazed Salmon</a></li>
                 <li><a href="arrozconpollo.html">Arroz Con Pollo</a></li>
