--- a/recipes/arrozconpollo.html
+++ b/recipes/arrozconpollo.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Arroz Con Pollo</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Arroz Con Pollo</h1>
+        <h1 class=>Arroz Con Pollo</h1>
         <img src="../images/arroz.png" alt="riceandchicken">
         <h2>Description</h2>
         <p>
@@ -34,6 +35,7 @@
             <li>1 can diced tomatoes</li>
             <li>1 bay leaf</li>
         </ul>
+        <h2>Directions</h2>
         <ol>
             <li>Pat chicken dry with paper towels, then season all over with salt and pepper. In a small bowl, combine cumin, oregano, garlic powder, and cayenne. Rub mixture into chicken. </li>
             <li>In a large skillet over medium-high heat, heat oil. Add chicken and cook until golden, 5 minutes per side. Remove skillet and reserve on a plate. </li>
