Add css to arrozconpollo page to look better

--- a/recipes/arrozconpollo.html
+++ b/recipes/arrozconpollo.html
@@ -5,19 +5,19 @@
         <title>Arroz Con Pollo</title>
         <link rel="stylesheet" href="../styles.css">
     </head>
-    <body>
-        <h1 class=>Arroz Con Pollo</h1>
-        <img src="../images/arroz.png" alt="riceandchicken">
-        <h2>Description</h2>
-        <p>
+    <body class="arrozpage">
+        <h1 class="arroztitle">Arroz Con Pollo</h1>
+        <img id="arrozpic" src="../images/arroz.png" alt="riceandchicken">
+        <h2 class="arrozsubtitle">Description</h2>
+            <p class="arrozdescription">
             Translating directly to rice with chicken, arroz con pollo<br>
             is a traditional dish in Latin America and Spain. This classic<br>
             meal can vary from country to country and the family recipe.<br>
             For our recipe, we used well-seasoned chicken thighs, drumsticks,<br> 
             onion, bell peppers, diced tomatoes, and long-grain rice (of course).<br> 
-        </p>
-        <h2>Ingredients</h2>
-        <ul>
+            </p>
+        <h2 class="arrozsubtitle">Ingredients</h2>
+        <ul class="arrozdescription">
             <li>3 lb bone in, skin on chicken thighs and drumsticks</li>
             <li>Kosher salt</li>
             <li>Freshly ground pepper</li>
@@ -35,16 +35,16 @@
             <li>1 can diced tomatoes</li>
             <li>1 bay leaf</li>
         </ul>
-        <h2>Directions</h2>
-        <ol>
+        <h2 class="arrozsubtitle">Directions</h2>
+        <ol class="arrozdirections">
             <li>Pat chicken dry with paper towels, then season all over with salt and pepper. In a small bowl, combine cumin, oregano, garlic powder, and cayenne. Rub mixture into chicken. </li>
             <li>In a large skillet over medium-high heat, heat oil. Add chicken and cook until golden, 5 minutes per side. Remove skillet and reserve on a plate. </li>
             <li>To same skillet over medium heat, add onion and pepper. Cook until soft, 5 minutes. Add garlic and cook until fragrant, 1 minute more, then stir in tomato paste. </li>
             <li>Add rice and cook until well coated and toasted, 3 minutes. Pour in chicken broth and diced tomatoes, and bay leaf, stirring up any bits from bottom of pan. Bring to a boil, then add chicken back to skillet. Reduce heat and let simmer, covered, until chicken is cooked through and rice is tender, 30 minutes. Stir occasionally to make sure rice is not sticking to bottom of pan. Add more water or broth as necessary. </li>
             <li>Remove bay leaf and serve with cilantro.</li>
         </ol>
-        <h2>Links</h2>
-        <ul>
+        <h2 class="arrozsubtitle">Links</h2>
+        <ul class="arrozdescription">
             <li><a href="../index.html">Homepage</a></li>
             <li><a href="glazedsalmon.html">Glazed Salmon</a></li>
             <li><a href="redpepperlinguine.html">Red Pepper Shrimp Linguine</a></li>
